# sword

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md
crates/sword/: Cargo.toml  README.md
crates/sword-ai/: Cargo.toml  README.md
crates/sword-ai/src/: config.rs  db.rs  lib.rs  server.rs  tracing.rs
crates/sword-cli/: Cargo.toml  README.md
crates/sword-cli/src/: main.rs
crates/sword-cli/src/commands/: new.rs
crates/sword-cli/templates/base/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.template
crates/sword-cli/templates/base/src/: main.rs
crates/sword-cli/templates/base/src/app/: routes.rs
crates/sword-cli/templates/base/src/app/controllers/: users_controller.rs
crates/sword-cli/templates/base/src/domain/entities/: user.rs
crates/sword-cli/templates/base/src/domain/repositories/: user_repository.rs
crates/sword-cli/templates/base/src/domain/services/: user_service.rs
crates/sword-cli/templates/base/src/infrastructure/database/: mod.rs
crates/sword-cli/templates/base/src/infrastructure/database/migration/: m20220101_000001_create_user.rs  mod.rs
crates/sword-cli/templates/base/src/infrastructure/database/models/: users.rs
crates/sword/src/: config.rs  db.rs  lib.rs  server.rs  tracing.rs
