[package]
name = "sword-ai"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Ecosystem of libraries and tools designed to bring both performance and productivity to backend development, AI systems, data engineering, and distributed systems in Rust"
repository = "https://github.com/mateusramos/sword-ai"
homepage = "https://github.com/mateusramos/sword-ai"
documentation = "https://docs.rs/sword-ai"
readme = "README.md"
keywords = ["axum", "backend", "framework", "ai", "distributed-systems"]
categories = ["web-programming::http-server", "database"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1"

