[package]
name = "sword-cli"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool to scaffold projects using the SwordAI framework"
repository = "https://github.com/mateusramos/sword-ai"
homepage = "https://github.com/mateusramos/sword-ai"
documentation = "https://github.com/mateusramos/sword-ai"
readme = "README.md"
keywords = ["cli", "scaffold", "axum", "seaorm", "backend"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sword"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
anyhow = "1"
include_dir = "0.7"
